src/test/ui/suggestions/lifetimes/trait-object-nested-in-impl-trait.base.stderr
error[E0759]: `self` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/trait-object-nested-in-impl-trait.rs:35:31
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo>> {
   |             ----- this data with an anonymous lifetime `'_`...
...
LL |             remaining: self.0.iter(),
   |                        ------ ^^^^
   |                        |
   |                        ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/trait-object-nested-in-impl-trait.rs:31:23
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo>> {
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to declare that the `impl Trait` captures data from argument `self`, you can add an explicit `'_` lifetime bound
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo>> + '_ {
   |                                                          ++++
help: to declare that the trait object captures data from argument `self`, you can add an explicit `'_` lifetime bound
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo + '_>> {
   |                                                        ++++

error[E0759]: `self` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/trait-object-nested-in-impl-trait.rs:48:31
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo>> + '_ {
   |             ----- this data with an anonymous lifetime `'_`...
...
LL |             remaining: self.0.iter(),
   |                        ------ ^^^^
   |                        |
   |                        ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/trait-object-nested-in-impl-trait.rs:44:23
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo>> + '_ {
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to declare that the trait object captures data from argument `self`, you can add an explicit `'_` lifetime bound
   |
LL |     fn iter(&self) -> impl Iterator<Item = Box<dyn Foo + '_>> + '_ {
   |                                                        ++++

error[E0759]: `self` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/trait-object-nested-in-impl-trait.rs:61:31
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo>> + 'a {
   |                 -------- this data with lifetime `'a`...
...
LL |             remaining: self.0.iter(),
   |                        ------ ^^^^
   |                        |
   |                        ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/trait-object-nested-in-impl-trait.rs:57:30
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo>> + 'a {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to declare that the trait object captures data from argument `self`, you can add an explicit `'a` lifetime bound
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo + 'a>> + 'a {
   |                                                               ++++

error[E0759]: `self` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/trait-object-nested-in-impl-trait.rs:74:31
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo>> {
   |                 -------- this data with lifetime `'a`...
...
LL |             remaining: self.0.iter(),
   |                        ------ ^^^^
   |                        |
   |                        ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/trait-object-nested-in-impl-trait.rs:70:30
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo>> {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to declare that the `impl Trait` captures data from argument `self`, you can add an explicit `'a` lifetime bound
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo>> + 'a {
   |                                                                 ++++
help: to declare that the trait object captures data from argument `self`, you can add an explicit `'a` lifetime bound
   |
LL |     fn iter<'a>(&'a self) -> impl Iterator<Item = Box<dyn Foo + 'a>> {
   |                                                               ++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0759`.
